# ade-bench

./: README.md  conftest.py  pyproject.toml
ade_bench/: harness.py  harness_models.py
ade_bench/agents/: base_agent.py
ade_bench/agents/installed_agents/: abstract_installed_agent.py
ade_bench/agents/installed_agents/openai_codex/: openai_codex_agent.py
ade_bench/cli/ab/: main.py
ade_bench/parsers/: claude_parser.py
ade_bench/terminal/: docker_compose_manager.py  terminal.py
ade_bench/trace/: __init__.py  exceptions.py  manager.py  models.py
ade_bench/utils/: results_writer.py
docker/base/: Dockerfile.duckdb-dbt
docs/: TEST_PLAN.md  TRACE.md
scripts/: mock_llm_server.py
scripts_python/: summarize_results.py
shared/defaults/: docker-compose-duckdb-dbt.yaml  docker-compose-duckdb-dbtf.yaml  docker-compose-snowflake-dbt.yaml  docker-compose-snowflake-dbtf.yaml
tasks/analytics_engineering001/: task.yaml
tasks/analytics_engineering002/: task.yaml
tasks/analytics_engineering004/: task.yaml
tasks/analytics_engineering005/: task.yaml
tasks/analytics_engineering006/: task.yaml
tasks/analytics_engineering007/: task.yaml
tests/agents/installed_agents/: test_openai_codex_agent.py
tests/trace/: test_manager.py  test_mock_server.py
