[project]
name = "ade-bench"
version = "1.0.0rc1"
description = "A benchmarking framework for data analyst tasks using dbt and SQL"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "docker>=6.0",
    "podman>=5.6",
    "libtmux>=0.23",
    "tqdm>=4.65",
    "click>=8.1",
    "typer>=0.9.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=9.0.0",
    "tabulate>=0.9.0",
    "ruamel-yaml>=0.18.10",
    "boto3>=1.26",
    "psycopg>=3.1",
    "anthropic>=0.18",
    "openai>=1.0",
    "pandas>=2.0",
    "duckdb>=0.9",
    "snowflake-connector-python>=3.0",
    "pyarrow>=10.0",
    "claude-code-transcripts>=0.6",
    # Trace (record/replay) subsystem
    "flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=26.3.1",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
wizard = "ade_bench.cli.wizard:main"
ade-bench = "ade_bench.cli.ab.main:app"
ade = "ade_bench.cli.ab.main:app"
ab = "ade_bench.cli.ab.main:app"

[project.urls]
Source = "https://github.com/dbt-labs/ade-bench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ade_bench"]

[tool.hatch.build.targets.wheel.force-include]
"shared" = "shared"
"docker" = "docker"
"tasks" = "tasks"
"scripts" = "scripts"

[tool.pytest.ini_options]
pythonpath = [".", "./scripts"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
